# employee-management

./: .gitignore  CMakeLists.txt  CUserInterface.h  CsvFile.cpp  CsvFile.h  File.cpp  File.h  LinkedList.cpp  LinkedList.h  Login.cpp  Login.h  Node.cpp  Node.h  User.cpp  User.h  UserAction.cpp  UserAction.h  UserData.cpp  UserData.h  UserInterface.cpp  UserInterface.h  Users.cpp  Users.h  main.cpp
.github/workflows/: build-windows.yml  clang-build-windows.yml  cmake-multi-platform.yml  cmake-single-platform.yml
